<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SPORACTION</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register">INSCRIPTION</string>
    <string name="login">CONNEXION</string>
    <string name="registerBTN">CREER UN COMPTE</string>
    <string name="loginBTN">SE CONNECTER</string>
    <string name="pseudo">Pseudo</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="alreadyregistred">CONNEXION</string>
    <string name="notRegistredYet">CREER UN COMPTE</string>
    <string name="rememberme">Se souvenir de moi</string>
    <string name="participationList">MES PARTIES PARTICIPEES</string>
    <string name="organisationList">MES PARTIES ORGANISEES</string>
    <string name="monProfil">Mon PROFIL</string>
    <string name="maPartie">Ma partie</string>
    <string name="Adresse">adresse</string>
    <string name="Sports">sport</string>
    <string name="sports">Sports</string>
    <string name="plagehoraire">Plage horaire</string>
    <string name="rayongeographique">Rayon Géographique</string>
    <string name="btnLinkToEditProfilScreen">Editer le profil</string>
    <string name="editProfil">EDITER PROFIL</string>
    <string name="codepostal">Code postal</string>
    <string name="ville">Ville</string>
    <string name="autre">Sport autre</string>
    <string name="basket">Basketball</string>
    <string name="foot">Football</string>
    <string name="handball">Hanball</string>
    <string name="tennis">Tennis</string>
    <string name="piscine">Piscine</string>
    <string name="volley">VolleyBall</string>
    <string name="squash">Squash</string>
    <string name="athletisme">Athlétisme</string>
    <string name="niveaux">Niveaux</string>
    <string name="matinee">Matinée</string>
    <string name="midi">12h-14h</string>
    <string name="apresmidi">Après-midi</string>
    <string name="soiree">Soirée (18h)</string>
    <string name="unkm">1 Km</string>
    <string name="deuxkm">2 Km</string>
    <string name="cinqkm">5 Km</string>
    <string name="dixkm">10 Km</string>
    <string name="valider">Valider</string>
    <string name="date">Date</string>
    <string name="heure">Heure</string>
    <string name="niveau">Niveau</string>
    <string name="terrain">Terrain</string>
    <string name="materiel">Materiel</string>
    <string name="participant">Participant</string>
    <string name="sport">Sport</string>
    <string name="editPartie">Edition de partie</string>
    <string name="participationDetails">PARTIE EN DETAIL</string>
    <string name="modelHeure">hh:mm</string>
    <string name="modelDate">jj/mm/aaaa</string>
    <string name="title_activity_editeuhprofil">MainActivity</string>
    <string name="sportfavori">Sport favori</string>
	<string-array name="niveau_array">
        <item>Débutant</item>
        <item>Bon niveau</item>
        <item>Haut niveau</item>
    </string-array>    	
	<string-array name="sportfavori_array">
        <item>basketball</item>
        <item>Hand</item>
        <item>Piscine</item>
        <item>Squach</item>
        <item>Football</item>
        <item>Tennis</item>
        <item>Volleyball</item>
        <item>Athlétisme</item>
        <item>Autre</item>        
    </string-array>
</resources>
